fix misaligned things

--- a/dawn/static/css/search.css
+++ b/dawn/static/css/search.css
@@ -1,14 +1,14 @@
 form {
+    height: 50px;
     margin: 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 50px;
 }
 
 #search-content {
-    margin: 2vh 4vw;
     height: calc(100vh - 150px);
+    margin: 2vh 4vw;
     display: flex;
     /*grid-template-columns: auto 2vw 20px minmax(0, 300px);*/
     flex-direction: row;
@@ -16,19 +16,19 @@ form {
 }
 
 nav#search-sidebar {
-    display: flex;
-    flex-direction: row;
     width: 300px;
     height: calc(100vh - 150px);
+    display: flex;
+    flex-direction: row;
     overflow: hidden;
 }
 
 #search-info {
+    width: calc(300px - 40px);
+    height: calc(100vh - 194px);
     position: relative;
     left: 0;
     right: 0;
-    width: calc(300px - 40px);
-    height: calc(100vh - 194px);
     border: 2px solid #95989A;
     border-left: none;
     padding: 20px;
@@ -85,8 +85,8 @@ nav#search-sidebar {
 }
 
 #search-click {
-    position: relative;
     height: calc(100vh - 154px);
+    position: relative;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -106,11 +106,11 @@ nav#search-sidebar {
 }
 
 #search-results {
-    display: grid;
-    grid-template-rows: auto 1vh auto;
     width: 100%;
-    margin: 0 2vw;
     height: inherit;
+    display: flex;
+    flex-direction: column;
+    margin: 0 2vw;
 }
 
 #search-toolbar {
@@ -128,17 +128,17 @@ nav#search-sidebar {
 }
 
 #database-list {
+    height: 100%;
     display: flex;
     flex-direction: row;
-    height: 100%;
     font-size: 1.2em;
 }
 
 #database-list .database {
+    width: 40px;
+    height: 36px;
     text-align: center;
     margin: 0 5px;
-    height: 36px;
-    width: 40px;
     line-height: 40px;
     border: 2px solid rgb(96, 174, 224);
     background: rgb(96, 174, 224);
@@ -163,15 +163,15 @@ nav#search-sidebar {
 }
 
 #database-time input {
-    margin: 0 5px;
     width: 50px;
     height: 40px;
+    margin: 0 5px;
 }
 
 #database-sort {
+    height: 100%;
     display: flex;
     flex-direction: row;
-    height: 100%;
     margin: 0 5px;
 }
 
@@ -182,9 +182,9 @@ nav#search-sidebar {
 }
 
 #search-list {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
     padding-right: 5px;
     margin-right: 5px;
 }
